Overlapping volumes render incorrectly with branched path tracing #53854

Closed
opened 2018-01-22 10:32:50 +01:00 by Stefan Werner · 11 comments
Member

This bug is verified on macOS and Linux in commit c723e91ee1

Git bisect points to commit cd023b6cec as the one introducing this bug. Said commit was part of D2766.

expected result.png

actual result.png

overlapping_volumes.blend

This bug is verified on macOS and Linux in commit c723e91ee155612b68950ca2a44b49bdd3c72838 Git bisect points to commit cd023b6cecb7b8c74de1d16510ad09668b86001f as the one introducing this bug. Said commit was part of [D2766](https://archive.blender.org/developer/D2766). ![expected result.png](https://archive.blender.org/developer/F1935811/expected_result.png) ![actual result.png](https://archive.blender.org/developer/F1935813/actual_result.png) [overlapping_volumes.blend](https://archive.blender.org/developer/F1935791/overlapping_volumes.blend)
Author
Member

Added subscriber: @Stefan_Werner

Added subscriber: @Stefan_Werner
Author
Member
No description provided.
Author
Member

It looks like this happens with plain transparency too - branched path tracing and plain path tracing give different results. See the attached scene.
overlapping_transparencies.blend

It looks like this happens with plain transparency too - branched path tracing and plain path tracing give different results. See the attached scene. [overlapping_transparencies.blend](https://archive.blender.org/developer/F1936858/overlapping_transparencies.blend)

This issue was referenced by blender/cycles@d5d609f292

This issue was referenced by blender/cycles@d5d609f292b0f3905d32070445292cfb72d56219

This issue was referenced by 8a2d09eb9f

This issue was referenced by 8a2d09eb9f5a5804ded16900523087a312ffa302

Added subscriber: @brecht

Added subscriber: @brecht

cd023b6cec just changed the noise, the issue was in d750d18.

cd023b6cec just changed the noise, the issue was in d750d18.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Thanks, that was quick.
You're right, D2766 only made the issue more visible - it was present in earlier revisions as well when the min transparency parameter was set low enough.

Thanks, that was quick. You're right, [D2766](https://archive.blender.org/developer/D2766) only made the issue more visible - it was present in earlier revisions as well when the min transparency parameter was set low enough.

This issue was referenced by blender/cycles@9302f496e2

This issue was referenced by blender/cycles@9302f496e23b9daeb5a0ff7c169a943324214ee6

This issue was referenced by 2838cf0dfe

This issue was referenced by 2838cf0dfe6c8b435cc54881bf548e2bbb0096ae
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53854
No description provided.