Fix T53854: branched path tracing correlation bug with transparency in split kernel.